# mute

./: .gitignore  Makefile  Makefile.in  README.md  configure.ac  mute  run_lints.sh  run_tests.sh
.github/workflows/: test.yaml
lints/: version.sh  whitespace.sh
man/: .gitignore  mute.1.md
tests/: auto.explicit12.exp  auto.implicit12.exp  auto.names.exp  auto.notty1.implicit12.exp  auto.saved.allttys.exp  auto.saved.implicit12.exp  chat  error.badpid.sh  force.explicit12.sh  force.implicit12.sh  force.names.sh  force.only1.sh  force.output.append.sh  force.output.sh  racy.force.implicit12.sh  saved.12.sh  saved.123.sh  saved.321.sh
